feat: add new fields on ben details

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -32,8 +32,8 @@
   box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),
               0 4px 6px -2px rgba(0,0,0,0.05);
   width: 50%;
-  max-width: 90vw;
-  max-height: 90vh;
+  min-width: 95vw;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   /* NO overflow-y: auto aquí */
