--- a/src/style/style.css
+++ b/src/style/style.css
@@ -25,7 +25,7 @@
 .modal-container {
   position: relative;
   z-index: 40;
-  background: white;
+  background: rgb(255, 255, 255);
   border: 2px solid #fbbf24;
   border-radius: 0.5rem;
   padding: 1rem;
