--- a/src/style/style.css
+++ b/src/style/style.css
@@ -38,6 +38,23 @@
   flex-direction: column;
   /* NO overflow-y: auto aquí */
 }
+.modal-container-user {
+  position: relative;
+  z-index: 40;
+  background: rgb(255, 255, 255);
+  border: 2px solid #fdba10;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),
+              0 4px 6px -2px rgba(0,0,0,0.05);
+  width: 30%;
+  max-width: 30%;
+  height: 30%;
+  max-height: 30%;
+  display: flex;
+  flex-direction: column;
+  /* NO overflow-y: auto aquí */
+}
 
 .modal-backdrop {
   position: fixed;
